# try-custom-url-protocol

./: .gitignore  README.md
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/static/: index.html
crates/shield/: Cargo.toml
crates/shield/src/: main.rs
