[package]
name = "shield"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg="0.9"
tracing="0.1"
log="0.4"
pretty_env_logger= "0.4"
anyhow= "1.0"
argh= "0.1"
tracing-appender= "0.1"
tracing-subscriber = "0.2"